--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       text-align: center;
     }
 
-    /* Circular profile picture: uses local file yakshita.png you will upload */
+    /* Circular profile picture: uses local file minakshipng you will upload */
     .profile-pic {
       width: 150px;
       height: 150px;
